feat: create en lang

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en, ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <title>VAZON - независимый агрегатор</title>
+    <title>VAZON - independent aggregator</title>
     <meta name="description"
-      content="VAZON - ваш независимый агрегатор где никто не сможет осудить вас за ваше мнение.">
-    <meta name="keywords" content="Новости, секретность, независимость">
+      content="VAZON - your independent aggregator where no one can judge you for your opinion.">
+    <meta name="keywords" content="News, secrecy, independence">
     <meta name="author" content="VAZON">
     <meta name="robots" content="index, follow">
   </head>
